Pacote Entity e Controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/RegistroUs?ServerTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/registrous?ServerTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=thiago@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
